<resources>
    <string name="app_name">Spotify fake</string>
    <string name="create_account">Create account</string>
    <string name="already_user">Already a user?</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="welcome_text">Millions of Songs Free on Spotify</string>
    <string name="support_register">If you need any support click here</string>
    <string name="good_morning">Good Morning!</string>
    <string name="recently_played">Recently played</string>
    <string name="liked_songs">Liked Songs 💛</string>
    <string name="podcast">Podcast 🎤 🤍</string>
    <string name="dance_music">Dance Music 💃</string>
    <string name="radio">Radio 📻</string>
    <string name="tym">❤</string>
    <string name="tym2">💙</string>
    <string name="top_songs">Top Songs</string>
    <string name="top_artists">Top Artists</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_not_match">Password not match</string>
    <string name="error_email_wrong_format">Email wrong format</string>
    <string name="setting_follow">1 people</string>
    <string name="setting_username">Nguyễn Hữu Trưởng</string>
</resources>