<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:gravity="center|top"
    android:orientation="vertical">
    <!--    tools:context="com.sodastudio.jun.spotify_demo.SpotifyLoginActivity"-->
    <!--    >-->

    <ImageView
        android:padding="40dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/main_logo_white"/>


    <TextView
        android:layout_width="243dp"
        android:layout_height="73dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textColor="@color/colorLoginPressed"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:padding="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_welcome_create_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/create_account_button"
            android:text="@string/create_account"
            android:textColor="#000000"
            android:textAllCaps="false"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"/>


        <Button
            android:id="@+id/btn_welcome_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/create_account_button"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="@dimen/font_large"
            android:textColor="#000000"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>