<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center|top"
    android:orientation="vertical">

    <ImageView
        android:padding="40dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/main_logo_green"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/sign_in"
        android:textColor="#ffffff"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_login_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:maxLines="1"
            android:lines="1"
            android:background="@drawable/round_rect"
            android:backgroundTint="#ffffff"
            android:textStyle="italic"
            android:textColor="@color/colorGrayLight"
            android:paddingStart="@dimen/edit_text_padding_left"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/edit_login_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_rect"
            android:backgroundTint="#ffffff"
            android:textStyle="italic"
            android:textColor="@color/colorGrayLight"
            android:paddingStart="@dimen/edit_text_padding_left"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry" />


        <Button
            android:id="@+id/btn_login_sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="110dp"
            android:background="@drawable/create_account_button"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:textStyle="bold"
            android:textColor="@color/colorLoginPressed"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/support_register"/>

    </LinearLayout>
    <ImageView
        android:padding="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_logo_white"/>
</LinearLayout>